# Andypymeta

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TESTING_AND_DEBUGGING.md  example_data.csv  meta.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_pymeta.py  tox.ini
.github/workflows/: ci.yml
andypymeta/: __init__.py  core.py  debug.py  utils.py
examples/: debug_demo.py
pymeta/: .coveragerc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  __init__.py  cli.py  config.py  errors.py  gui_app.py  noxfile.py  pyproject.toml  pytest.ini  registries.py  requirements-dev.txt  requirements.txt  setup.cfg  streamlit_gui.py  suite.py  tox.ini  typing.py
pymeta/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
pymeta/.github/workflows/: ci.yml  docs.yml  release.yml
pymeta/bias/: __init__.py  egger.py  trimfill.py
pymeta/cli/: __init__.py  __main__.py
pymeta/cli/commands/: bias.py  live.py  meta.py  plots.py
pymeta/diagnostics/: __init__.py  influence.py
pymeta/docs/: index.md  installation.md
pymeta/docs/comparisons/: COMPARISON.md
pymeta/docs/dev-guide/: architecture.md  contributing.md  testing.md
pymeta/docs/user-guide/: bias.md  cli.md  effects.md  heterogeneity.md  living.md  models.md  plots.md
pymeta/effects/: __init__.py  binary.py
pymeta/estimators/: __init__.py  tau2_dl.py  tau2_pm.py  tau2_reml.py
pymeta/examples/: 01_quickstart_re.py  02_forest_styles.py  03_bias_sensitivity.py  04_multivariate_demo.py  05_glmm_binomial_poisson.py  06_tsa_living_review.py
pymeta/io/: __init__.py  datasets.py
pymeta/living/: __init__.py  scheduler.py
pymeta/models/: __init__.py  base.py  fixed_effects.py  glmm_binomial.py  random_effects.py
pymeta/notebooks/: 01_end_to_end.ipynb  02_plot_gallery.ipynb  03_influence_diagnostics.ipynb
pymeta/plots/: __init__.py  baujat.py  forest.py  funnel.py  funnel_contour.py  gosh.py  publication_forest.py  radial.py
pymeta/pymeta/: __init__.py  _version.py  config.py  errors.py  logging.py  types.py
pymeta/pymeta/api/: public.py
pymeta/pymeta/effects/: binary.py  continuous.py
pymeta/pymeta/utils/: __init__.py  checks.py  ci.py  hk_sj.py  math.py  rng.py
pymeta/stats/: __init__.py  hksj.py
pymeta/tests/: conftest.py
pymeta/tests/data/: binary_small.csv  continuous_small.csv
pymeta/tsa/: __init__.py  boundaries.py  cumulative.py
src/pymeta/: __init__.py
src/pymeta/bayes/: __init__.py
src/pymeta/bias/: __init__.py
src/pymeta/cli/: __init__.py  __main__.py
src/pymeta/effects/: __init__.py
src/pymeta/estimators/: __init__.py
src/pymeta/glmm/: __init__.py
src/pymeta/inference/: __init__.py
src/pymeta/models/: __init__.py
src/pymeta/rve/: __init__.py
src/pymeta/viz/: __init__.py
src/pymeta_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_core.py  test_debug.py  test_effects.py  test_estimators.py  test_examples.py  test_funnel_contour.py  test_hksj.py  test_influence_loo.py  test_integration.py  test_models.py  test_scheduler.py  test_smoke.py  test_utils.py
tests/integration/: test_cli_meta.py  test_living_mode.py
tests/optional/: test_bayes_rct_rwe.py  test_glmm_binomial.py  test_rve.py
tests/unit/: test_bias_suite.py  test_effects_binary.py  test_estimators_tau2.py  test_inference_prediction.py  test_models_fe_re.py  test_viz_forest.py  test_viz_funnel.py
