[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andypymeta"
version = "0.0.1"
description = "Powerful Python meta-analysis suite"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{ name = "Mahmood Ahmad" }]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "statsmodels",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]