[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andypymeta"
version = "0.1.0"
description = "AndyPyMeta — advanced meta-analysis toolkit (powerful alternative to meta/metafor)"
readme = "README.md"
authors = [{ name = "Andy", email = "example@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["meta-analysis","evidence-synthesis","statistics","bayesian","tsa","transportability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "statsmodels>=0.14"
]
[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5.1",
]
viz = ["plotly>=5.18"]
bayes = ["pymc>=5.10", "arviz>=0.16"]
ml = ["scikit-learn>=1.3", "xgboost>=1.7"]
torch = ["torch>=2.2"]
gui = ["streamlit>=1.35"]
speed = ["numba>=0.58"]
[tool.setuptools.packages.find]
where = ["."]
include = ["andypymeta*"]
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings"
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","UP","B"]
ignore = ["E501"]
[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = false
exclude = ["tests/"]